component login binded with angular 14

--- a/angular14/src/index.html
+++ b/angular14/src/index.html
@@ -6,6 +6,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- Load the login web component -->
+  <script type="module" src="assets/web-component/login/login-web-component.js"></script>
 </head>
 <body>
   <app-root></app-root>
